<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".redBook.presentation.screen.RedBookItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_list"
            app:layout_constraintBottom_toBottomOf="@+id/imageBack"
            app:layout_constraintStart_toEndOf="@+id/imageBack"
            app:layout_constraintTop_toTopOf="@+id/imageBack" />

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/item_image"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/details"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="32dp"
            android:contentDescription="@string/item_image"
            android:scaleType="fitXY"
            android:src="@drawable/test_flower_image"
            app:layout_constraintEnd_toEndOf="@+id/headTop"
            app:layout_constraintStart_toStartOf="@+id/headTop"
            app:layout_constraintTop_toBottomOf="@+id/headTop"
            app:shapeAppearanceOverlay="@style/roundedCorners" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="@+id/item_image"
            app:layout_constraintTop_toBottomOf="@+id/item_image"
            tools:text="Header" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/favorite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_image"
            android:src="@drawable/baseline_star_outline_24"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintTop_toTopOf="@+id/header" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:text="Description" />

<!--        <com.yandex.mapkit.mapview.MapView-->
<!--            android:id="@+id/mapView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="16dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/description" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>